--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.34.16",
     "react-reveal": "^1.2.2",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
@@ -21,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve-json": "json-server --watch data.json --port 3000"
   },
   "eslintConfig": {
     "extends": [
